# VVclaude_hooks

./: .gitignore  CLAUDE.md  DISCORD_BOT_SETUP.md  ISSUE_RESOLUTION_SUMMARY.md  PHASE2_README.md  README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  TASK.md  analysis_start.py  claude_monitor.py  configure_sounds.py  deep_webhook_debug.py  diagnose_webhook.py  discord_bot.py  error_found.py  fix_webhook.py  get_new_webhook.py  notification.py  pyproject.toml  setup_discord_bot.py  sound_config.json  sound_manager.py  sound_types_guide.md  start_bidirectional.py  stop.py  task_start.py  test_hooks.py  test_new_hooks.py  thinking.py  validate_bot_config.py
